# archtecture-sandbox

./: Dockerfile.prod  compose.dev.yaml  compose.yaml  deploy_b.sh  deploy_f.sh
.gemini/: status.yaml
backend/: Cargo.toml  Dockerfile.prod
backend/.sqlx/: query-02aa53942878764633e0f9cd4ed3ada7130cf82ff2df99ffe2c430c5cf16381c.json  query-562370a5f34ce498e9440056d4b69fab9215dd6c6f7c009783cebd110b49af79.json
backend/src/: gemini.rs  main.rs
backend/src/domain/model/: chat.rs  diagram.rs  mod.rs  project.rs
backend/src/domain/repository/: project_repository.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/gemini/: client.rs  system_prompt.txt
backend/src/infrastructure/postgres/: project_repository.rs
backend/src/presentation/handlers/: project.rs
docs/: current_phase.yaml  infrastructure.yaml  next_step.yaml  project-info.yaml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  scenarios.ts  types.ts
frontend/src/components/: ArchitectureCanvas.tsx  ChatInterface.tsx  EvaluatinModal.tsx  EvaluationPanel.tsx  Header.tsx  HelpModal.tsx  MemoPad.tsx  PropertiesPanel.tsx  ScenarioSelectionScreen.tsx  ScenarioSettings.tsx  ScenarioSetup.tsx  Sidebar.tsx
frontend/src/constants/: architecture_defs.json  nodeTypes.ts
frontend/src/utils/: fileHandler.ts
terraform/: app_runner.tf  variables.tf
