[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.7", features = ["cors"] }
async-trait = "0.1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }